--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: David Karban
-  description: 
+  description: Role install passenger repo from https://oss-binaries.phusionpassenger.com/apt/passenger.
   company: 
   
   # If the issue tracker for your role is not on github, uncomment the
